mimir/ingress/istio/base/mimir-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: mimir-gateway
  namespace: $(namespace)
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: https
      number: 443
      protocol: HTTPS
    hosts:
    - "$(MIMIR_DOMAINNAME)"
    tls:
      mode: SIMPLE
      credentialName: mimir-tls
