mimir/ingress/istio/base/mimir-virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mimir-vs
  namespace: $(namespace)
spec:
  gateways:
  - mimir-gateway
  hosts:
  - "$(MIMIR_DOMAINNAME)"
  http:
  - headers:
      request:
        set:
          X-Forwarded-Proto: https
    match:
    - uri:
        prefix: /
    name: mimir-gateway
    route:
    - destination:
        host: mimir-gateway.monitoring.svc.cluster.local
        port:
          number: 80
